# Transactions_task

./: .dockerignore  .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  requirements.txt
account/: models.py  serializers.py  views.py
account/migrations/: 0001_initial.py  0002_alter_accountinfo_account_id.py  0003_alter_accountinfo_account_id.py  0004_alter_accountinfo_account_id.py  0005_alter_accountinfo_account_id.py  0006_alter_accountinfo_account_id.py
coolsite/: settings.py  urls.py
